--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -310,22 +310,31 @@ Let $\alpha_A = k_1 + k_2 + k_3$ and let $k_1, k_2, k_3$ be as defined in the fo
 
 Let round $r_1$ be the round when block $b$ is generated and round $r_2$ when block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$ is generated.
 
-\textbf{Claim 1:} $\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow$ are mostly disjoint. We show this by taking the two possible cases for the relation of $\mu_A$, $\mu'_B$ and the cases of $\alpha_A$ containing blocks with correct or incorrect interlinks up until block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$.\\
-This means that $b_2$ is the LCA block of adversary's proof and honest player's 0-level chain, without considering any (adversarial) blocks belonging in $\alpha'_B \downarrow$ sewed in the adversary's proof.
+\textbf{Claim 1:} $\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow$ are mostly disjoint. Following the proof under soft/hard fork conditions we conclude that $\vert \alpha_A\downarrow\uparrow^{\mu_A}[1:] \cap \alpha'_B\downarrow[1:] \vert \leq k_{1} = 2^{\mu'_B - \mu_A}$. In order to see this under the velvet fork conditions consider the following two claims. First let block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$. This means that $b_2$ is the LCA block of adversary's proof and honest player's 0-level chain, without considering any (adversarial) blocks sewed in the adversary's proof from $\alpha'_B \downarrow$.
+
+\textit{\underline{Claim 1a}:} If no adversarially generated block of chain $C_B$ with incorrect interlink is sewed in $\alpha_A$ until block $b_2$ then the claim's proof is the same to that of Theorem 2, thus $k_{1a} \leq 2^{\mu'_B - \mu_A}$.
 
 
-\textit{\underline{Claim 1a}:} If no adversarially generated block of chain $C_B$ with incorrect interlink is sewed in $\alpha_A$ then the claim's proof is the same to that of Theorem 2, thus $k_1 \leq 2^{\mu'_B - \mu_A}$.
 
-\textit{\underline{Claim 1b}:} If a block $b' = \{b' \in C_B\{b:b_2\} \cap \textit{ } b' \textit{ contains incorrect interlink} \}$ is included in $\alpha_A$ then no more honestly generated block of the common subchain $C_B\{b':b_2\}$ is included in $\alpha_A$ because of Remark 2. 
-In that case, blocks in $\alpha_A\{b:b'\}$ are subject to the constraints of Claim 1a, thus we have $k_{1a} \leq 2^{\mu'_B - \mu_A}$. 
-Blocks in $\alpha_A\{b':b_2\}$ are adversarially generated either directly in $C_A$ either sewed from $C_B$. Thus from that point on it is equivalent considering two disjoint chains competing each other. Let these blocks count to $k_{1b}$. \textit{(Consider the rounds when these blocks were generated and apply Lemma 1 to get a desirable inequality)}\\
+\textit{\underline{Claim 1b}:}  If a block $b' = \{b' \in C_B\{b:b_2\} \cap \textit{ } b' \textit{ contains incorrect interlink} \}$ is included in $\alpha_A$ then again we have that $\vert \alpha_A\downarrow\uparrow^{\mu_A}[1:] \cap \alpha'_B\downarrow[1:] \vert \leq k_{1a} = 2^{\mu'_B - \mu_A}$ but now proof $\alpha_A$ also contains sewed adversarial blocks. 
+	
+Note that after block $b'$ no more honestly generated blocks of the common subchain $C_B\{b':b_2\}$ are included in $\alpha_A$ because of Remark 2. Blocks in $\alpha_A\{b':b_2\}$ are all adversarially generated either directly in $C_A$ either sewed from $C_B$. Thus from that point on it is equivalent considering two disjoint chains competing each other. Let these blocks count to $k_{1b}$  where $k_{1b} \leq C_B\{b':b_2\}\uparrow^{\mu_A}$. Let $k_1 = k_{1a} + k_{1b}$. \textit{(In the end, consider the rounds when these blocks were generated and apply Lemma 1 to get a desirable inequality)}\\
 
-Finally we have 
-$\vert \alpha_A\downarrow\uparrow^{\mu_A}[1:] \cap \alpha'_B\downarrow[1:] \vert = k_{1a} + k_{1b} = k_1$, where $k_{1b} \leq C_B\{b':b_2\}\uparrow^{\mu_A}$.\\
+From all the above, we conclude that there are $\vert \alpha_A \vert - k_1$ blocks after block $b$ in $\alpha_A$ which are not honestly generated blocks existing in $\alpha_B\downarrow$. In other words, there are $\vert \alpha_A \vert - k_1$ blocks after block $b$ in $\alpha_A$, which are either adversarially generated existing in $\alpha_B\downarrow$ either don't belong in $\alpha_B\downarrow$. This makes $b_2$ the last block before the 0-level fork point included in the adversary's proof.\\
 
-From Claim $1a$ and Claim $1b$, we conclude that there are $\vert \alpha_A \vert - k_1$ blocks after block $b$ in $\alpha_A$ which are not honestly generated blocks existing in $\alpha_B\downarrow$. In other words, there are $\vert \alpha_A \vert - k_1$ blocks after block $b$ in $\alpha_A$ which are either adversarially generated existing in $\alpha_B\downarrow$ either don't belong in $\alpha_B\downarrow$. This makes $b_2$ the last block before the 0-level fork point included in the adversary's proof.\\
+\textbf{Claim 2.} (again, once an "incorrect" block is included in the proof no other honestly generated block can be included because of Remark 1. Just as Claim 1, in parallel to the proof of theorem 2.)\\
+At least $k_3$ superblocks of $\alpha_A$ are adversarially generated. Just as the proof under soft/hard fork, because of the Common Prefix property $\alpha_A \downarrow \uparrow [k_{1a}+k_{2a}:]$ could contain no honestly generated blocks. In case there are no sewed blocks, the above holds for $\alpha_A$ too. In order to generalize to velvet fork conditions, let the sewed blocks count to $k_{2b}$ and the sum $k_2 = k_{2a} + k_{2b}$. We conclude that $\alpha_A [k_{1}+k_{2}:]$ could contain no honestly generated blocks. \\ 
 
-\textbf{Claim 2.} To be constructed. (again, once an "incorrect" block is included in the proof no other honestly generated block can be included because of Remark 1. Just as Claim 1, in parallel to the proof of theorem 2.)\\
+Note that for every sewed subchain thatthe adversary includes in her proof, it may be that some other blocks generated in the adversary's chain are left out of the proof. This is due to the way blocks are generated in order to form a valid chain. So, in a case where a number of $C_B$ blocks are sewed in $C_A$ between blocks $b_{s_1}$ and $b_{s_2}$, say at rounds $s_1, s_2$ accordingly, any block generated in $C_A$ in the round set $s_1..s_2$ would be left out of the proof. This is illustrated in Figure \ref{fig:exclude}.\\
+
+\begin{figure}[h!]
+	\begin{center}
+		\includegraphics[scale=0.5]{figures/exclude.png}
+	\end{center}
+	\caption{\textit{ Wavy lines imply one or more blocks. Dashed lines and arrows imply interlink pointers to superblocks. \textbf{I}: the 0-level chains, \textbf{II}: the corresponding proof chains; some blocks generated in $C_A$ are excluded from proof $\pi_A$ in favor of the sewed blocks from $C_B$.}}
+	\label{fig:exclude}
+\end{figure}
+
 
 %
 %Claim * calculates an upper bound of the adversarially generated blocks that $\alpha_A, \alpha'_B\downarrow$ may have in common.\\
